--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-handlebars": "^8.0.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.4",
     "pg": "^8.12.0"
